# ExternalSort

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Release.yml  blank.yml
resources/: Sorted.txt  input.txt
resources/tests/: input10BLOCK_SIZE.txt  input10BLOCK_SIZE_SoretdDescending.txt  input10BLOCK_SIZE_Sorted.txt  input2n.txt  input2n_1.txt  inputSorted.txt  inputSortedNonAscending.txt  input_9999.txt  someData.txt
src/: errorReporting.hpp  fileActions.hpp  fileReader.cpp  fileReader.hpp  fileWriter.cpp  fileWriter.hpp  main.cpp  solver.cpp  solver.hpp
test/: CMakeLists.txt  tests.cc
